tests/compile_fail/derive_non_unit_variant.stderr
error: Scheduler derive requires unit variants
 --> tests/compile_fail/derive_non_unit_variant.rs:6:5
  |
6 |     Bad(u32),
  |     ^^^^^^^^
